[package]
name = "basic_rt"
version = "0.1.0"
authors = ["weixin_49256325 <lenuulan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7"
woke = "0.0.2"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
bit_field = "0.9.0"